<resources>
    <!--  app name  -->
    <string name="app_name">RamenLab</string>
    <!--  menu toolbar  -->
    <string name="alert">알림</string>
    <!--  bottom nav menu  -->
    <string name="home">홈</string>
    <string name="board">게시판</string>
    <string name="profile">프로필</string>
    <!--  home fragment  -->
    <string name="homeMainText1">나만을</string>
    <string name="homeMainText2">위한 라면,</string>
    <string name="homeMainText3">라면연구소</string>
    <string name="findMyRamenBtn">내가먹고싶은라면찾기</string>
    <string name="ramenRankingText">라면 순위</string>
    <string name="ramenRankingBtn">전체보기</string>
    <string name="newRamenText">새로 출시된 라면</string>
    <string name="newRamenBtn">전체보기</string>
    <string name="more">더 알아보기</string>
    <!--  ranking fragment  -->
    <string name="ranking_title_1">우리의 입맛을 사로잡은</string>
    <string name="ranking_title_2">인기 라면</string>
    <!--  board fragment  -->
    <string name="recipe_btn">레시피</string>
    <string name="chat_btn">잡담</string>
    <string name="announce_btn">공지</string>

    <!--  etc  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_board_content">BoardContentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>