<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/home_main_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/main_image" />

            <TextView
                android:id="@+id/home_main_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="78dp"
                android:alpha="0.5"
                android:fontFamily="@font/gmarketsansbold"
                android:text="@string/homeMainText1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_main_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:fontFamily="@font/gmarketsansbold"
                android:text="@string/homeMainText2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/home_main_text_1"
                app:layout_constraintTop_toBottomOf="@+id/home_main_text_1" />

            <TextView
                android:id="@+id/home_main_text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gmarketsansbold"
                android:text="@string/homeMainText3"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/home_main_text_2"
                app:layout_constraintTop_toBottomOf="@+id/home_main_text_2" />

            <Button
                android:id="@+id/find_my_ramen_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/spoqahansansneobold"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:text="@string/findMyRamenBtn"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:cornerRadius="26dp"
                app:icon="@drawable/ic_magnifyingglass"
                app:iconPadding="4dp"
                app:iconSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/home_main_text_3"
                app:layout_constraintTop_toBottomOf="@+id/home_main_text_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/strawberry_light"
            android:padding="28dp">

            <TextView
                android:id="@+id/ramen_ranking_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spoqahansansneobold"
                android:text="@string/ramenRankingText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/ramen_ranking_btn"
                android:layout_width="74dp"
                android:layout_height="28dp"
                android:backgroundTint="@color/coral_light"
                android:fontFamily="@font/spoqahansansneobold"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/ramenRankingBtn"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/coral_dark"
                android:textSize="14sp"
                app:cornerRadius="15dp"
                app:iconPadding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ramen_ranking_text"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/strawberry_light"
            android:padding="28dp">

            <TextView
                android:id="@+id/new_ramen_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spoqahansansneobold"
                android:text="@string/newRamenText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/new_ramen_btn"
                android:layout_width="74dp"
                android:layout_height="24dp"
                android:backgroundTint="@color/coral_light"
                android:fontFamily="@font/spoqahansansneobold"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/newRamenBtn"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/coral_dark"
                android:textSize="14sp"
                app:cornerRadius="15dp"
                app:iconPadding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/new_ramen_text"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_ramen_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_ramen_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

    </LinearLayout>
</ScrollView>