<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BoardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:importantForAccessibility="no"
            android:src="@drawable/board_select"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.811"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/recipe_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/selector_board_nav"
            android:fontFamily="@font/spoqahansansneobold"
            android:gravity="center"
            android:text="@string/recipe_btn"
            android:textColor="@drawable/selector_board_nav_text"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_recipe"
            app:iconPadding="0dp"
            app:iconTint="@drawable/selector_board_nav_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/chat_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:background="@drawable/selector_board_nav"
            android:fontFamily="@font/spoqahansansneobold"
            android:gravity="center"
            android:text="@string/chat_btn"
            android:textColor="@drawable/selector_board_nav_text"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_chat"
            app:iconPadding="0dp"
            app:iconTint="@drawable/selector_board_nav_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/announce_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/recipe_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/announce_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="110dp"
            android:layout_height="45sp"
            android:background="@drawable/selector_board_nav"
            android:fontFamily="@font/spoqahansansneobold"
            android:gravity="center"
            android:text="@string/announce_btn"
            android:textColor="@drawable/selector_board_nav_text"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_announce"
            app:iconPadding="0dp"
            app:iconTint="@drawable/selector_board_nav_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.967"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/strawberry_light">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/board_recycler_view"
            android:layout_width="375dp"
            android:layout_height="564dp"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_board_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/coral_dark"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_board_writing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>